# inventory

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  wsgi.py
config/: settings.py  test_settings.py  urls.py
inventory/: admin.py  forms.py  models.py  urls.py  views.py
inventory/migrations/: 0001_initial.py  0002_alter_inventoryitem_id_alter_unitofmeasure_id_and_more.py
inventory/models/: __init__.py  inventory_item.py  unit_of_measure.py
inventory/templates/inventory/: base.html  inventory_confirm_delete.html  inventory_detail.html  inventory_form.html  inventory_list.html  unit_form.html  unit_list.html
inventory/views/: __init__.py  inventory_item_views.py  unit_of_measure_views.py
tests/: test_inventory_constraints.py  test_smoke.py  test_sqlite_pragmas.py  test_unit_constraints.py
