[tool.poetry]
name = "inventory"
version = "0.1.0"
description = ""
authors = ["Oscar Barlow <oscar-barlow@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
